# aoc-2025

./: Cargo.toml  build.rs  day09_part2_initial.ppm  run.sh
src/: day01_part1.rs  day01_part2.rs  day02_part1.rs  day02_part2.rs  day03_part1.rs  day04_part1.rs  day04_part2.rs  day05_part1.rs  day05_part2.rs  day06_part1.rs  day06_part2.rs  day07_part1.rs  day08_part1.rs  day09_part1.rs  day09_part2.rs  main.rs  selector.rs
src/solutions/: day01_part1.rs  day03_part2.rs  day04_part1.rs  day04_part2.rs  day05_part2.rs  day06_part1.rs  day06_part2.rs  day07_part2.rs  day08_part1.rs  day08_part2.rs  mod.rs
