[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"
authors = ["devn1x"]

[dependencies]
#nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "bevy-refactor" }
nannou = { git = "https://github.com/nannou-org/nannou.git", branch = "master" }

[build-dependencies]
glob = "0.3.3"
